--- a/test-output/htmlreports/automation-test-report.html
+++ b/test-output/htmlreports/automation-test-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automated Test reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 10, 2023 18:17:52</span></a>
+<a href="#"><span class="badge badge-primary">May 14, 2023 13:06:57</span></a>
 </li>
 </ul>
 </div>
@@ -66,19 +66,19 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 10, 2023 18:17:52</h3>
+<h3>May 14, 2023 13:06:57</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 10, 2023 18:17:56</h3>
+<h3>May 14, 2023 13:07:23</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>1</h3>
+<h3>2</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -101,7 +101,7 @@
 </div>
 <div class="card-footer">
 <div><small data-tooltip='100%'>
-<b>1</b> features passed
+<b>2</b> features passed
 </small>
 </div>
 <div>
@@ -123,7 +123,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> scenarios passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -143,7 +143,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>8</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login Functionality":3.977
+"Login to Heroku website":11.372,"Login to Orange HRM website":14.314
 };
 </script>
 <div class="row">
@@ -172,8 +172,8 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@Test01</td>
-<td>1</td>
+<td>@test01</td>
+<td>2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -214,18 +214,18 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 1,
+passParent: 2,
 failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 2,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 4,
+passGrandChild: 8,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -250,7 +250,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@Test01</a>
+<a class="dropdown-item" href="#">@test01</a>
 </ul>
 </li>
 </ul>
@@ -261,9 +261,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login Functionality</p>
+            <p class="name">Login to Heroku website</p>
             <p class="text-sm">
-              <span>6:17:52 PM</span> / <span>00:00:03:977</span>
+              <span>1:06:58 PM</span> / <span>00:00:11:372</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -271,10 +271,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Login Functionality</h5>
-<span class='badge badge-success'>05.10.2023 6:17:52 PM</span>
-<span class='badge badge-danger'>05.10.2023 6:17:56 PM</span>
-<span class='badge badge-default'>00:00:03:977</span>
+<h5 class="test-status text-pass">Login to Heroku website</h5>
+<span class='badge badge-success'>05.14.2023 1:06:58 PM</span>
+<span class='badge badge-danger'>05.14.2023 1:07:09 PM</span>
+<span class='badge badge-default'>00:00:11:372</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -286,32 +286,107 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Successful login</div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login to Herokuapp website</div>
       </div>
     </div>
-        <div class="collapse">
-          <div class="card-body">
-              <div class="step pass-bg" title="com.gs2020.test.stepdefinitions.LoginSteps.iAmOnLoginPage()">
-                <span>Given I am on the login page</span>
+        <div class="scenario_outline collapse">
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Login to Herokuapp website</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given user is on the login page</span>
       <div>
       </div>
-              </div>
-              <div class="step pass-bg" title="com.gs2020.test.stepdefinitions.LoginSteps.iEnterUsernameAndPassword()">
-                <span>When I enter my username and password</span>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When user entered "tomsmith" and "SuperSecretPassword!"</span>
       <div>
       </div>
-              </div>
-              <div class="step pass-bg" title="com.gs2020.test.stepdefinitions.LoginSteps.iClickOnLoginButton()">
-                <span>And I click on the login button</span>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user clicked login button</span>
       <div>
       </div>
-              </div>
-              <div class="step pass-bg" title="com.gs2020.test.stepdefinitions.LoginSteps.iShouldBeLoggedInSuccessfully()">
-                <span>Then I should be logged in successfully</span>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then user should be logged in successfully</span>
       <div>
       </div>
+                  </div>
               </div>
+            </div>
+        </div>
+  </div>
+</div>
           </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="10"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">Login to Orange HRM website</p>
+            <p class="text-sm">
+              <span>1:07:09 PM</span> / <span>00:00:14:314</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">Login to Orange HRM website</h5>
+<span class='badge badge-success'>05.14.2023 1:07:09 PM</span>
+<span class='badge badge-danger'>05.14.2023 1:07:23 PM</span>
+<span class='badge badge-default'>00:00:14:314</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=10</span>
+<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
+<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+</div>
+<div class="m-t-10 m-l-5"></div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="11"><span class="badge log pass-bg mr-2">Pass</span>Login to orangehrm</div>
+      </div>
+    </div>
+        <div class="scenario_outline collapse">
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="12"><span class="badge log pass-bg mr-2">Pass</span>Login to orangehrm</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given user is on login page of website2</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When user entered "Admin" and "admin123" in website2</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user clicked login button of website2</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then user should logged successfully in website2</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
         </div>
   </div>
 </div>
@@ -337,15 +412,15 @@ eventsCount: 5,
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
+<span class='badge log pass-bg'>2</span>
 </span>
-<p class="name">@Test01</p>
-<p class="duration text-sm">1 tests</p>
+<p class="name">@test01</p>
+<p class="duration text-sm">2 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@Test01</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<h4>@test01</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -358,11 +433,21 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>18:17:52 PM</td>
+<td>13:06:58 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Successful login</a>
+<a href="#" class="linked" test-id='1' id='3'>Login to Herokuapp website</a>
 <div class="">
-<span class="badge badge-default">Login Functionality.Successful login</span>
+<span class="badge badge-default">Login to Heroku website.Login to Herokuapp website</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>13:07:09 PM</td>
+<td>
+<a href="#" class="linked" test-id='10' id='12'>Login to orangehrm</a>
+<div class="">
+<span class="badge badge-default">Login to Orange HRM website.Login to orangehrm</span>
 </div>
 </td>
 </tr>
